src/test/deca/context/invalid/declaVariable-readFloatwrongType.context
declaVariable-readFloatwrongType.deca:11:
